syntax = "proto3";

option go_package = "../codec";

message rpcRequest {
	uint64 seq    = 1;
    string method = 2;
    bytes  arg    = 3;
    bool   oneway = 4;
}

message rpcResponse {
    uint64 seq     = 1;
    bytes  ret     = 2;
    uint32 errCode = 3;
    string errDesc = 4;
}


